salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>Buttons and quick actions exposed by its layouts.</description>
    <label>Actions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>