salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Approvals__c.field-meta.xml
<CustomField>
    <fullName>Approvals__c</fullName>
    <description>Approval processes it takes part in, on objects it can edit.</description>
    <label>Approvals</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>