salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Blanket_Perms__c.field-meta.xml
<CustomField>
    <fullName>Blanket_Perms__c</fullName>
    <description>Which blanket permissions, where there are any.</description>
    <label>Blanket Permissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>