salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Blocked_By__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By__c</fullName>
    <description>Active validation rules that can refuse its saves.</description>
    <label>Blocked By</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>