salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Blocking_Rules__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Rules__c</fullName>
    <description>The validation rules that constrain it, by name.</description>
    <label>Blocking Rules</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>