salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Editable_Objects__c.field-meta.xml
<CustomField>
    <fullName>Editable_Objects__c</fullName>
    <description>The objects themselves, so the count can be checked rather than trusted.</description>
    <label>Editable Objects</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>