salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Fields_Available__c.field-meta.xml
<CustomField>
    <fullName>Fields_Available__c</fullName>
    <description>Fields on the objects this persona may read — the denominator that makes the visible count a fraction rather than a bare number.</description>
    <label>Fields Available</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>