salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Fields_Visible__c.field-meta.xml
<CustomField>
    <fullName>Fields_Visible__c</fullName>
    <description>Fields an assigned layout actually puts in front of this persona. Blank, not zero, for a permission set: layouts are assigned by profiles, so the count is unknown rather than none.</description>
    <label>Fields Visible</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>