salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Flow_Names__c.field-meta.xml
<CustomField>
    <fullName>Flow_Names__c</fullName>
    <description>The processes this persona can start, by name.</description>
    <label>Flow Names</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>