salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <description>Processes this persona can start.</description>
    <label>Flows</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>