salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Objects_Deletable__c.field-meta.xml
<CustomField>
    <fullName>Objects_Deletable__c</fullName>
    <description>Objects it may delete records on. Rarely required by an agent, and irreversible when wrong.</description>
    <label>Objects Deletable</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>