salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Objects_Editable__c.field-meta.xml
<CustomField>
    <fullName>Objects_Editable__c</fullName>
    <description>Objects this persona may create, edit or modify-all.</description>
    <label>Objects Editable</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>