salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Objects_Readable__c.field-meta.xml
<CustomField>
    <fullName>Objects_Readable__c</fullName>
    <description>Objects this persona has any access to.</description>
    <label>Objects Readable</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>