salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Persona_Kind__c.field-meta.xml
<CustomField>
    <fullName>Persona_Kind__c</fullName>
    <description>Profile or permission set. It matters for reading the record: only a profile assigns layouts, so a permission set has no visible-field count rather than a count of zero.</description>
    <label>Persona Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Profile</fullName><default>false</default><label>Profile</label></value>
            <value><fullName>PermissionSet</fullName><default>false</default><label>Permission Set</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>