salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Reach__c.field-meta.xml
<CustomField>
    <fullName>Reach__c</fullName>
    <description>A blunt single number for ordering personas against each other. Not a measurement, and not to be reported as one.</description>
    <label>Reach</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>