salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Scan__c.field-meta.xml
<CustomField>
    <fullName>Scan__c</fullName>
    <description>The scan that reconstructed this surface.</description>
    <label>Scan</label>
    <referenceTo>OrgIQ_Scan__c</referenceTo>
    <relationshipLabel>Personas</relationshipLabel>
    <relationshipName>Personas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>