salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>The persona in one sentence, in the shape a reviewer recognises: what it edits, how much of what it may read is actually put in front of it, what it can start, and what constrains it.</description>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>