salesforce/force-app/main/default/objects/OrgIQ_Persona__c/fields/Unbounded__c.field-meta.xml
<CustomField>
    <fullName>Unbounded__c</fullName>
    <description>Grants Modify All Data or View All Data, so its reach is every record of every object regardless of sharing. Not a wide persona — an unbounded one, which is a different thing.</description>
    <label>Unbounded</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>